--- a/portfolio-masonry-4-col-wide.css
+++ b/portfolio-masonry-4-col-wide.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 Main Stylesheet
 
-Project:    HighPoint - Multipurpose Business Template
+Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    20/03/2022
+Last change:    17/10/2024
 Author:    creativemaze
 Primary use:    Portfolio
 -------------------------------------------------------------------*/
@@ -82,75 +82,91 @@ ul{
 	}
 }
 
+svg{
+    fill: currentColor;
+    width: 102%;
+    margin-left: -1%;
+    height: auto;
+}
+
+
 .portfolio_heading{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 40px;
 	font-weight: 700;
 	display: block;
 	color: #111111;
-	letter-spacing: 1px;
 	text-align: center;
-	line-height: 1.3em;
+	letter-spacing: 1px;
+	line-height: 1.2em;
+	max-width: 600px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .portfolio_info{
-	max-width: 600px;
-	margin: 0 auto;
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 600;
 	display: block;
-	color: #696969;
+	color: #1488cc;
 	letter-spacing: 1px;
 	text-align: center;
-	padding: 10px 10px 0;
+	text-transform: uppercase;
 	line-height: 1.5em;
 }
 
 /* 2. HEADER
  ----------- */
-
+ 
 /* --- 2.1. Logo & Navigation --- */
-nav.navbar.bootsnav .navbar-brand{
-    max-width: 200px; 	
-}
-
-.navbar-header a.navbar-brand{
+.navbar-header > a{
 	text-decoration: none;
 	color: #111111;
 	transition: 0.5s;
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 22px;
 	font-weight: 700;
+	display: inline-block;
+	text-align: center;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	padding-top: 30px;
+	margin-top: 30px;
 }
 
-.navbar-header a.navbar-brand:hover{
+.navbar-header > a:hover{
 	color: #111111;
 }
 
-nav.navbar .navbar-brand img.logo{
-   width: 100%;
+#nav-logo > a{
+	max-width: 160px; 
+	min-height: 10px;
+	position: relative;
+	top: 33px;
+}
+
+#nav-logo > a img{
+   position: relative;
+   max-width: 160px;
    height: auto;
-   display: block;
 }
 
 nav.navbar.bootsnav{
 	background-color: transparent;
 	border-bottom: none ;
-	z-index: 9999;
+	z-index: 1;
 }
 
 nav.navbar.bootsnav ul.nav{
 	margin-right: 160px;
+	margin-top: 5px;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
 	border: 0;
 	background: #ffffff;
-	z-index: 9999;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	z-index: 1;
 }
 
 nav.navbar.bootsnav ul.nav > li > a{
@@ -176,7 +192,7 @@ nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a{
 }
 
 nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a:hover{
-	color: #009fff;
+	color: #1488cc;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
@@ -219,14 +235,14 @@ nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a{
 }
 
 nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a:hover{
-	color: #009fff;
+	color: #1488cc;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     font-size: 14px;
     font-weight: 600;
 	font-family: 'Montserrat' , Arial, sans-serif;
-    color: #009fff;
+    color: #1488cc;
     text-transform: uppercase;
 	letter-spacing: 1px;
 }
@@ -240,7 +256,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .attr-nav > ul > li > a{
     color: #111111;
-	padding-top: 30px;
+	padding-top: 36px;
 	margin-left: -12px;
 	position: relative;
 	left: -160px;
@@ -292,9 +308,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .left_info .fas,
 .left_info .far,
-.right_info .fab{
+.right_info > a > .fab{
 	font-size: 16px;
-	color: #009fff;
+	color: #1488cc;
 }
 
 .left_info .fas,
@@ -302,12 +318,11 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-right: 8px;
 }
 
-.right_info > a{
+.right_info > a .fab{
 	padding-right: 14px;
 }
 
-.left_info .fas:hover,
-.right_info .fab:hover{
+.right_info > a > .fab:hover{
 	color: #111111;
 }
 
@@ -347,17 +362,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 300px;
 	display: inline-block;
 	position: absolute;
-	top: 15px;
+	top: 19px;
 	right: 0;
 }
 
 .head_btn a{
-	background: transparent;
+	background-color: #1488cc;
 	width: 150px;
 	margin: 0 auto;
-	min-height: 30px;
-    border: none;
-    color: #111111;
+    color: #ffffff;
     padding: 12px 14px;
     text-decoration: none;
 	text-transform: uppercase;
@@ -366,172 +379,146 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
-    cursor: pointer;
-	border: 1px solid #111111;
+	border: 1px solid #1488cc;
 	letter-spacing: 1px;
 	text-align: center;
 }
 
 .head_btn a:hover{
-	background-color: #009fff;
-	color: #ffffff;
-	border-color: #009fff;
-}
-
-.sliderwrap{
-	position: relative;
-}
-
-.slidearea{
-	position: relative;
-	z-index: 1000;
-	height: 100%;
-	min-height: 500px;
-	text-align: center;
-	color: #ffffff;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	background: #009fff; 
-}
-
-.header__content{
-	display: flex;
-	flex-direction: column;
-	justify-content:  center;
-	align-items: center;
-	min-height: 500px;
-}
-
-.header-title {
-	max-width: 600px;
-	display: block;
-	padding: 0 20px;
-}
-
-.header-title__main{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	letter-spacing: 1px;
-	text-align: center;
-	text-transform: uppercase;
-	display: block;
-	color: #ffffff;
-	line-height: 1.3em;
+	background-color: #ffffff;
+	color: #111111;
+	border-color: #111111; 
 }
 
 /* 3. MAIN CONTENT
  ----------- */
-
+ 
 /* --- 3.1. Portfolio Area One --- */
 .portfolio_area_one{
 	width: 100%;
-	margin: 0 0 2em;
-	min-height: 400px;
-	padding: 6em 25px;
-	background-color: #f6f6f6;
+	margin: 6em auto -7em;
+	padding: 0 10px;
 }
 
 .portfolio_group_one{
 	width: 100%;
 	display: flex; 
 	flex-wrap: wrap;
-	padding-top: 30px;
+	padding-top: 25px;
 }
 
 .portfolio_col{
 	flex: 25%;
 	width: 25%;
+}
+
+.portfolio_box{
+	position: relative;
+	text-align: center;
 	overflow: hidden;
+	margin: auto;
+	padding: 10px 10px 30px;
 }
 
 .portfolio_image{
 	position: relative;
 	text-align: center;
 	overflow: hidden;
-	margin: auto;
-	padding: 20px;
 }
 
-.portfolio_box{
-	position: relative;
-	overflow: hidden;
-	transition: .5s ease;
-}
-
-.portfolio_image .portfolio_box > img{
+.portfolio_image .image_box a > img{
 	transition: ease-in-out 3.25s;
 }
 
-.portfolio_image:hover .portfolio_box > img{
+.portfolio_image .image_box > a > img:hover{
 	transform: scale(1.15);
 }
 
 .portfolio_image img{
-	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	overflow: hidden;
 	display: block;
 }
 
-.portfolio_title h3{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 15px;
+.portfolio_content{
+	text-align: center;
+}
+
+.portfolio_content h3{
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-size: 18px;
 	font-weight: 600;
 	display: block;
 	color: #111111;
 	letter-spacing: 1px;
-	text-align: left;
+	text-align: center;
 	line-height: 1.4em;
+}
+
+.portfolio_content a{
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-size: 13px;
+	font-weight: 600;
+    color: #1488cc;
+	display: inline-block;
+    text-decoration: none;
 	text-transform: uppercase;
+    transition: 0.5s;
+	letter-spacing: 1px;
+	text-align: center;
 }
 
-.overlay{
-	position: absolute;
-	top: 10px;
-	bottom: 10px;
-	left: 10px;
-	right: 10px;
-	overflow: hidden;
-	height: calc(100% - 20px);
-	width: calc(100% - 20px);
-	opacity: 0;
-	transition: 0.5s ease;
-	background: #ffffff
-}
-
-.overlay .fas{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-size: 20px;
+.portfolio_content a:hover{
 	color: #111111;
-}
-
-.portfolio_image:hover .overlay {
-	opacity: 1;
 }
 
 /* 4. FOOTER
  ----------- */
-.footer{
-	width: 100%;
-	min-height: 350px;
+.footer_wrap{
 	position: relative;
-	clear: both;
-	height: 100%;
+	transform: rotateZ(180deg);
+	transform: rotateX(180deg);
+}
+
+.footer_wave{
+	overflow: hidden;
+	width: 140%;
+	transform: translateY(-50%);
+	color: #fff;
+	margin-left: -20%;
+	animation: 3s ease-in-out infinite alternate waveAnimateFooter;
+}
+
+.footer_gradient{
+	overflow: hidden;
+	min-height: 350px;
+	background-color: rgba(8, 0, 103, 1);
+	background-image: linear-gradient(to right, #2B32B2, #1488cc);
+	text-shadow: 0 2px 20px rgba(0, 0, 0, 0.16);
+}
+
+@keyframes waveAnimateFooter{
+    0% {
+        transform: translate(-80px,-52%);
+    }
+
+    100% {
+        transform: translate(80px,-50%);
+    }
+} 
+ 
+.footer{
+	transform: rotateZ(-180deg);
+	transform: rotateX(-180deg);
 }
 
 .footer_area{
-	max-width: 1200px;
+	max-width: 1280px;
 	margin: 0 auto;
 	padding: 0 25px;
 	display: flex;
 	flex-wrap: wrap;
-	margin: 0 auto;
+	padding-top: 7em;
 }
 
 .footer_col{
@@ -543,13 +530,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .footer_col{
-	padding-top: 3.5em;
+	padding-top: 4.5em;
 }
 
-a.footer-brand img{
-	max-width: 200px;
+a.footer-logo img{
+	max-width: 150px;
 	height: auto;
-	display: block;
+	display: inline-block;
+	margin-top: 12px;
+	margin-bottom: 10px;
 }
 
 .footer_box > h3 > a{
@@ -559,7 +548,7 @@ a.footer-brand img{
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	text-decoration: none;
-	color: #111111;
+	color: #ffffff;
 	text-align: left;
 }
 
@@ -568,7 +557,7 @@ a.footer-brand img{
 	font-size: 14px;
 	font-weight: normal;
 	letter-spacing: 1px;
-	color: #111111;
+	color: #ffffff;
 	text-align: left;
 	padding: 20px 0;
 	line-height: 1.5em;
@@ -578,26 +567,21 @@ a.footer-brand img{
 	margin: 12px 0;
 }
 
-.footer_social .fab,
-.footer_social .fa{
+.footer_social > a > .fab,
+.footer_social > a > .fa{
 	font-size: 16px;
-	color: #111111;
+	color: #ffffff;
 	text-align: left;
+	transition: 0.5s;
 }
 
 .footer_social > a{
 	padding-right: 12px;
 }
 
-.footer_social > a:hover{
-	opacity: 0.6;
-}
-
-.final{
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: center;
+.footer_social > a > .fab:hover,
+.footer_social > a > .fa:hover{
+	color: #dddddd;
 }
 
 .footer_col > h4{
@@ -605,8 +589,7 @@ a.footer-brand img{
 	font-size: 18px;
 	font-weight: 700;
 	letter-spacing: 1px;
-	color: #111111;
-	line-height: 1.4em;
+	color: #ffffff;
 }
 
 .footer_col > ul > li{
@@ -619,31 +602,38 @@ a.footer-brand img{
 	font-weight: normal;
 	letter-spacing: 1px;
 	text-decoration: none;
-	color: #111111;
+	color: #ffffff;
 	text-align: justify;
 	transition: 0.5s;
 }
 
 .footer_col > ul > li a:hover{
-	opacity: 0.6;
+	color: #dddddd;
 }
 
-.form-row{
-	text-align: right;
+.subscribe-row{
+	text-align: left;
 }
 
 .col_info input[type="email"]{
 	display: block;
 	width: 100%;
-	padding: 12px 10px 14px;
-	background-color: #f6f6f6;
+	height: 50px;
+	padding: 14px;
+	padding-left: 0;
+	background: transparent;
 	border: none;
+	border-bottom: solid 1px #ffffff;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
-	font-weight: 600;
-	color: #333333;
-	text-transform: capitalize;
+	font-weight: normal;
+	color: #dddddd;
 	letter-spacing: 1px;
+}
+
+.col_info input[type="email"]::placeholder{
+	color: #dddddd;
+	opacity: 1;
 }
 
 .col_info{
@@ -651,32 +641,29 @@ a.footer-brand img{
 }
 
 .col_info input[type="submit"]{
-	display: inline-block;
-	padding: 10px 14px;
+	padding: 12px 14px;
+	width: 135px;
 	text-align: center;
+	text-transform: uppercase;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 14px;
-	font-weight: 500;
+	font-weight: 600;
 	margin-top: 20px;
-	text-transform: uppercase;
-	width: 100%;
-	margin-left: 0;
-	color: #ffffff;
-	border-radius: 0;
+	color: #111111;
 	letter-spacing: 1px;
-	background-color: #009fff;
+	background-color: #ffffff;
+	border-radius: 0;
 	border: solid 1px #ffffff;
 	transition: 0.5s;
 }
 
 .col_info input[type="submit"]:hover{
 	background: transparent;
-	color: #111111;
-	border-color: #111111;
+	color: #ffffff;
+	border-color: #ffffff;
 }
 
 .col_info input[type="email"]:focus{
-	outline: none;
 	box-shadow: 0 0 0 2px #e0e0e0;
 }
 
@@ -685,7 +672,8 @@ a.footer-brand img{
 	padding-top: 35px;
 	padding-bottom: 10px;
 	margin-top: 35px;
-	border-top: solid 1px #e0e0e0;
+	border-top: solid 1px #ffffff;
+	
 }
 
 .details p{
@@ -693,27 +681,19 @@ a.footer-brand img{
 	font-size: 13px;
 	font-weight: normal;
 	letter-spacing: 1px;
-	color: #111111;
+	color: #ffffff;
 	text-align: center;
 }
 
 /* 5. RESPONSIVE
- ----------- */
-@media only screen and (max-width: 1024px){
-	.header__content{
-		height: auto;
-	}
-	
-	.slide__content{
-		height: auto;
-	}
-}
-
+ ----------- */  
 @media only screen and (max-width: 992px){
 	nav.navbar.bootsnav .navbar-toggle{
         background: transparent;
         color: #111111;
 		font-size: 25px;
+		margin-top: 7px;
+		margin-bottom: 12px;
 	}
 	
 	.head_btn{	
@@ -723,8 +703,12 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header a.navbar-brand{
-		padding-top: 22px;
+	.navbar-header > a{
+		margin-top: 14px;
+	}
+	
+	#nav-logo > a{
+		top: 19px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -787,12 +771,16 @@ a.footer-brand img{
 	.attr-nav > ul > li > a{
 		position: relative;
 		left: 0;
-		padding-top: 25px;
+		padding-top: 21px;
 	}
 	
 	.portfolio_col{
 		flex: 50%;
 		width: 50%;
+	}
+	
+	.portfolio_area_one{
+		margin-bottom: -4em;
 	}
 	
 	.footer_col{
@@ -802,7 +790,6 @@ a.footer-brand img{
 }
 
 @media only screen and (max-width: 600px){
-	.header-title__main,
 	.portfolio_heading{
 		font-size: 30px;
 	}
@@ -812,9 +799,20 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
+	.portfolio_area_one{
+		margin-bottom: 0;
+	}
+	
 	.footer_col{
 		flex: 100%;
 		width: 100%;
 		margin: 0;
+	}
+}
+
+@media only screen and (max-width: 420px){
+	.portfolio_box{
+		padding-left: 0;
+		padding-right: 0;
 	}
 }
